--- a/src/routes/globalstyle.css
+++ b/src/routes/globalstyle.css
@@ -1,10 +1,16 @@
 @import '@fontsource/fira-mono';
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;500;600;700;800&display=swap');
 
 :root {
-	--font-body: Arial, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu,
-		Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+	--font-body: 'Open Sans', Arial, -apple-system, sans-serif;
 	--font-mono: 'Fira Mono', monospace;
 }
 
 body {
+	font-family: 'Open Sans';
+	font-size: 16px;
+	line-height: 1.5;
+
+	
+	background-color: #e5e5e5;
 }
