--- a/src/routes/globalstyle.css
+++ b/src/routes/globalstyle.css
@@ -7,6 +7,8 @@
 }
 
 * {
+	margin: 0;
+	padding: 0;
 	box-sizing: border-box;
 }
 
@@ -16,6 +18,12 @@ body {
 	line-height: 1.5;
 
 	background-color: #e5e5e5;
+
+	display: flex;
+	flex-direction: column;
+	align-items: stretch;
+	height: 100vh;
+	width: 100vw;
 }
 
 input,
