--- a/src/routes/globalstyle.css
+++ b/src/routes/globalstyle.css
@@ -2,7 +2,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;500;600;700;800&display=swap');
 
 :root {
-	--font-body: 'Open Sans', Arial, -apple-system, sans-serif;
+	--font-body: 'Open Sans', -apple-system, sans-serif;
 	--font-mono: 'Fira Mono', monospace;
 }
 
