Add cart functionality

--- a/src/routes/globalstyle.css
+++ b/src/routes/globalstyle.css
@@ -44,6 +44,10 @@ button {
 	text-transform: uppercase;
 }
 
+button.error {
+	background-color: #d92518;
+}
+
 label {
 	font-weight: bold;
 	text-transform: uppercase;
