--- a/src/routes/globalstyle.css
+++ b/src/routes/globalstyle.css
@@ -38,8 +38,8 @@ button {
 }
 
 input[type='checkbox'] {
-	width: 20px;
-	height: 20px;
+	width: 15px;
+	height: 15px;
 }
 
 button {
@@ -56,7 +56,7 @@ button:hover {
 	background-color: #0e9c93;
 }
 
-button.error {
+button.danger {
 	background-color: #d92518;
 }
 
@@ -68,5 +68,5 @@ label {
 hr {
 	border: none;
 	border-top: 1px solid #ccc;
-	margin: 1rem 0;
+	/* margin: 1rem 0; */
 }
